@@ -208,12 +208,29 @@ public class Profiler {
             com.sun.management.OperatingSystemMXBean.class).getSystemCpuLoad();
         json.put("cpuLoad", new JSONObject().put("perc", cpuLoad * 100));
       }
+// Get the GarbageCollectorMXBeans
+      List<GarbageCollectorMXBean> gcMXBeans = ManagementFactory.getGarbageCollectorMXBeans();
 
-      final sun.management.HotspotRuntimeMBean hotSpotRunTime = sun.management.ManagementFactoryHelper.getHotspotRuntimeMBean();
-      json.put("jvmSafePointTime", new JSONObject().put("value", hotSpotRunTime.getTotalSafepointTime()));
-      json.put("jvmSafePointCount", new JSONObject().put("count", hotSpotRunTime.getSafepointCount()));
-      json.put("jvmAvgSafePointTime",
-          new JSONObject().put("value", hotSpotRunTime.getTotalSafepointTime() / (float) hotSpotRunTime.getSafepointCount()));
+// Iterate over the GC MXBeans to get the total GC time
+      long totalGCTime = 0;
+      for (GarbageCollectorMXBean gcMXBean : gcMXBeans) {
+        totalGCTime += gcMXBean.getCollectionTime();
+      }
+
+// Use the total GC time as an approximation of the total safepoint time
+      json.put("jvmSafePointTime", new JSONObject().put("value", totalGCTime));
+
+// There is no direct equivalent of getSafepointCount(), but you can get the number of GCs
+      long totalGCCount = 0;
+      for (GarbageCollectorMXBean gcMXBean : gcMXBeans) {
+        totalGCCount += gcMXBean.getCollectionCount();
+      }
+
+// Use the total GC count as an approximation of the safepoint count
+      json.put("jvmSafePointCount", new JSONObject().put("count", totalGCCount));
+
+// Calculate the average safepoint time
+      json.put("jvmAvgSafePointTime", new JSONObject().put("value", totalGCTime / (float) totalGCCount));
 
     } catch (final Throwable e) {
       // JMX NOT AVAILABLE, AVOID OS DATA
@@ -330,7 +347,7 @@ public class Profiler {
         walTotalFiles += (Long) walStats.get("logFiles");
       }
 
-      buffer.append(String.format("ARCADEDB %s Profiler", Constants.getRawVersion()));
+      buffer.append("ARCADEDB %s Profiler".formatted(Constants.getRawVersion()));
 
       final Runtime runtime = Runtime.getRuntime();
 
@@ -345,10 +362,10 @@ public class Profiler {
           final long osTotalMem = ((Number) mbs.getAttribute(osMBeanName, "TotalPhysicalMemorySize")).longValue();
           final long osUsedMem = osTotalMem - ((Number) mbs.getAttribute(osMBeanName, "FreePhysicalMemorySize")).longValue();
 
-          buffer.append(String.format("%n JVM heap=%s/%s os=%s/%s gc=%dms",
-              FileUtils.getSizeAsString(runtime.totalMemory() - runtime.freeMemory()),
-              FileUtils.getSizeAsString(runtime.maxMemory()), FileUtils.getSizeAsString(osUsedMem),
-              FileUtils.getSizeAsString(osTotalMem), gcTime));
+          buffer.append("%n JVM heap=%s/%s os=%s/%s gc=%dms".formatted(
+            FileUtils.getSizeAsString(runtime.totalMemory() - runtime.freeMemory()),
+            FileUtils.getSizeAsString(runtime.maxMemory()), FileUtils.getSizeAsString(osUsedMem),
+            FileUtils.getSizeAsString(osTotalMem), gcTime));
 
           dumpWithJmx = true;
         }
@@ -358,40 +375,40 @@ public class Profiler {
 
       if (!dumpWithJmx)
         buffer.append(
-            String.format("%n JVM heap=%s/%s gc=%dms", FileUtils.getSizeAsString(runtime.totalMemory() - runtime.freeMemory()),
-                FileUtils.getSizeAsString(runtime.maxMemory()), gcTime));
+          "%n JVM heap=%s/%s gc=%dms".formatted(FileUtils.getSizeAsString(runtime.totalMemory() - runtime.freeMemory()),
+            FileUtils.getSizeAsString(runtime.maxMemory()), gcTime));
 
-      buffer.append(String.format("%n PAGE-CACHE read=%s (pages=%d) write=%s (pages=%d) max=%s readOps=%d (%s) writeOps=%d (%s)",
-          FileUtils.getSizeAsString(readCacheUsed), readCachePages, FileUtils.getSizeAsString(writeCacheUsed), writeCachePages,
-          FileUtils.getSizeAsString(cacheMax), pagesRead, FileUtils.getSizeAsString(pagesReadSize), pagesWritten,
-          FileUtils.getSizeAsString(pagesWrittenSize)));
-
-      buffer.append(
-          String.format("%n DB databases=%d asyncParallelLevel=%d asyncQueue=%d txCommits=%d txRollbacks=%d queries=%d commands=%d",
-              databases.size(),
-              asyncParallelLevel, asyncQueueLength, txCommits, txRollbacks, queries, commands));
-      buffer.append(String.format("%n    createRecord=%d readRecord=%d updateRecord=%d deleteRecord=%d", createRecord, readRecord,
-          updateRecord, deleteRecord));
-      buffer.append(
-          String.format("%n    scanType=%d scanBucket=%d iterateType=%d iterateBucket=%d countType=%d countBucket=%d", scanType,
-              scanBucket, iterateType,
-              iterateBucket, countType, countBucket));
-
-      buffer.append(String.format("%n INDEXES compactions=%d", indexCompactions));
+      buffer.append("%n PAGE-CACHE read=%s (pages=%d) write=%s (pages=%d) max=%s readOps=%d (%s) writeOps=%d (%s)".formatted(
+        FileUtils.getSizeAsString(readCacheUsed), readCachePages, FileUtils.getSizeAsString(writeCacheUsed), writeCachePages,
+        FileUtils.getSizeAsString(cacheMax), pagesRead, FileUtils.getSizeAsString(pagesReadSize), pagesWritten,
+        FileUtils.getSizeAsString(pagesWrittenSize)));
 
       buffer.append(
-          String.format(
-              "%n PAGE-MANAGER flushQueue=%d cacheHits=%d cacheMiss=%d concModExceptions=%d evictionRuns=%d pagesEvicted=%d",
-              pageFlushQueueLength,
-              pageCacheHits, pageCacheMiss, concurrentModificationExceptions, evictionRuns, pagesEvicted));
+        "%n DB databases=%d asyncParallelLevel=%d asyncQueue=%d txCommits=%d txRollbacks=%d queries=%d commands=%d".formatted(
+          databases.size(),
+          asyncParallelLevel, asyncQueueLength, txCommits, txRollbacks, queries, commands));
+      buffer.append("%n    createRecord=%d readRecord=%d updateRecord=%d deleteRecord=%d".formatted(createRecord, readRecord,
+        updateRecord, deleteRecord));
+      buffer.append(
+        "%n    scanType=%d scanBucket=%d iterateType=%d iterateBucket=%d countType=%d countBucket=%d".formatted(scanType,
+          scanBucket, iterateType,
+          iterateBucket, countType, countBucket));
+
+      buffer.append("%n INDEXES compactions=%d".formatted(indexCompactions));
 
       buffer.append(
-          String.format("%n WAL totalFiles=%d pagesWritten=%d bytesWritten=%s", walTotalFiles, walPagesWritten,
-              FileUtils.getSizeAsString(walBytesWritten)));
+
+          "%n PAGE-MANAGER flushQueue=%d cacheHits=%d cacheMiss=%d concModExceptions=%d evictionRuns=%d pagesEvicted=%d".formatted(
+          pageFlushQueueLength,
+          pageCacheHits, pageCacheMiss, concurrentModificationExceptions, evictionRuns, pagesEvicted));
 
       buffer.append(
-          String.format("%n FILE-MANAGER FS=%s/%s openFiles=%d maxFilesOpened=%d", FileUtils.getSizeAsString(freeSpaceInMB),
-              FileUtils.getSizeAsString(totalSpaceInMB), totalOpenFiles, maxOpenFiles));
+        "%n WAL totalFiles=%d pagesWritten=%d bytesWritten=%s".formatted(walTotalFiles, walPagesWritten,
+          FileUtils.getSizeAsString(walBytesWritten)));
+
+      buffer.append(
+        "%n FILE-MANAGER FS=%s/%s openFiles=%d maxFilesOpened=%d".formatted(FileUtils.getSizeAsString(freeSpaceInMB),
+          FileUtils.getSizeAsString(totalSpaceInMB), totalOpenFiles, maxOpenFiles));
 
       out.println(buffer);
     } catch (final Exception e) {
