@@ -207,8 +207,7 @@ public class MathExpression extends SimpleNode {
 
           final Number r = apply(leftAsLong, rightAsLong);
           return Duration.of(r.longValue(), highestPrecision);
-        } else if (left instanceof Collection) {
-          final Collection<Object> coll = (Collection<Object>) left;
+        } else if (left instanceof Collection coll) {
           coll.add(right);
           return left;
         } else if (left instanceof Map) {
@@ -217,8 +216,7 @@ public class MathExpression extends SimpleNode {
           if (right instanceof Map) {
             final Map<String, Object> mapRight = (Map<String, Object>) right;
             mapLeft.putAll(mapRight);
-          } else if (right instanceof Collection) {
-            final Collection<Object> arrayRight = (Collection<Object>) right;
+          } else if (right instanceof Collection arrayRight) {
             if (arrayRight.size() % 2 != 0)
               throw new IllegalArgumentException("Cannot add items to the maps because the collection contains odd entries");
 
@@ -278,18 +276,17 @@ public class MathExpression extends SimpleNode {
           result = null;
         } else if (left instanceof Number && right == null) {
           result = left;
-        } else if (right instanceof Number && left == null) {
-          result = apply(0, this, (Number) right);
-        } else if (left instanceof Number && right instanceof Number) {
-          result = apply((Number) left, this, (Number) right);
+        } else if (right instanceof Number number && left == null) {
+          result = apply(0, this, number);
+        } else if (left instanceof Number a && right instanceof Number b) {
+          result = apply(a, this, b);
         } else if (DateUtils.isDate(left) || DateUtils.isDate(right)) {
           final ChronoUnit highestPrecision = DateUtils.getHigherPrecision(left, right);
           final Long leftAsLong = DateUtils.dateTimeToTimestamp(left, highestPrecision);
           final Long rightAsLong = DateUtils.dateTimeToTimestamp(right, highestPrecision);
           final Number r = apply(leftAsLong, rightAsLong);
           result = Duration.of(r.longValue(), highestPrecision);
-        } else if (left instanceof Collection) {
-          final Collection<Object> coll = (Collection<Object>) left;
+        } else if (left instanceof Collection coll) {
           coll.remove(right);
           return left;
         } else if (left instanceof Map) {
@@ -301,8 +298,7 @@ public class MathExpression extends SimpleNode {
               if (entry.getValue().equals(mapLeft.get(entry.getKey())))
                 mapLeft.remove(entry.getKey());
             }
-          } else if (right instanceof Collection) {
-            final Collection<Object> arrayRight = (Collection<Object>) right;
+          } else if (right instanceof Collection arrayRight) {
             for (final Iterator<Object> iter = arrayRight.iterator(); iter.hasNext(); ) {
               final String key = iter.next().toString();
               mapLeft.remove(key);
@@ -491,15 +487,15 @@ public class MathExpression extends SimpleNode {
         if (left == null && right == null) {
           return null;
         }
-        if (left instanceof Number && right == null) {
-          return apply((Number) left, this, 0);
+        if (left instanceof Number number && right == null) {
+          return apply(number, this, 0);
         }
-        if (right instanceof Number && left == null) {
-          return apply(0, this, (Number) right);
+        if (right instanceof Number number && left == null) {
+          return apply(0, this, number);
         }
 
-        if (left instanceof Number && right instanceof Number) {
-          return apply((Number) left, this, (Number) right);
+        if (left instanceof Number a && right instanceof Number b) {
+          return apply(a, this, b);
         }
 
         return null;
@@ -595,8 +591,8 @@ public class MathExpression extends SimpleNode {
       if (right == null)
         return left;
 
-      if (left instanceof Number && right instanceof Number)
-        return apply((Number) left, this, (Number) right);
+      if (left instanceof Number a && right instanceof Number b)
+        return apply(a, this, b);
 
       return null;
     }
@@ -614,8 +610,8 @@ public class MathExpression extends SimpleNode {
           return operation.apply(a.floatValue(), b.floatValue());
         else if (b instanceof Double)
           return operation.apply(a.doubleValue(), b.doubleValue());
-        else if (b instanceof BigDecimal)
-          return operation.apply(new BigDecimal((Integer) a), (BigDecimal) b);
+        else if (b instanceof BigDecimal decimal)
+          return operation.apply(new BigDecimal((Integer) a), decimal);
       } else if (a instanceof Long) {
         if (b instanceof Integer || b instanceof Long || b instanceof Short)
           return operation.apply(a.longValue(), b.longValue());
@@ -623,35 +619,35 @@ public class MathExpression extends SimpleNode {
           return operation.apply(a.floatValue(), b.floatValue());
         else if (b instanceof Double)
           return operation.apply(a.doubleValue(), b.doubleValue());
-        else if (b instanceof BigDecimal)
-          return operation.apply(new BigDecimal((Long) a), (BigDecimal) b);
+        else if (b instanceof BigDecimal decimal)
+          return operation.apply(new BigDecimal((Long) a), decimal);
       } else if (a instanceof Float) {
         if (b instanceof Short || b instanceof Integer || b instanceof Long || b instanceof Float)
           return operation.apply(a.floatValue(), b.floatValue());
         else if (b instanceof Double)
           return operation.apply(a.doubleValue(), b.doubleValue());
-        else if (b instanceof BigDecimal)
-          return operation.apply(BigDecimal.valueOf((Float) a), (BigDecimal) b);
+        else if (b instanceof BigDecimal decimal)
+          return operation.apply(BigDecimal.valueOf((Float) a), decimal);
 
       } else if (a instanceof Double) {
         if (b instanceof Short || b instanceof Integer || b instanceof Long || b instanceof Float || b instanceof Double)
           return operation.apply(a.doubleValue(), b.doubleValue());
-        else if (b instanceof BigDecimal)
-          return operation.apply(BigDecimal.valueOf((Double) a), (BigDecimal) b);
+        else if (b instanceof BigDecimal decimal)
+          return operation.apply(BigDecimal.valueOf((Double) a), decimal);
 
       } else if (a instanceof BigDecimal) {
-        if (b instanceof Integer)
-          return operation.apply((BigDecimal) a, new BigDecimal((Integer) b));
-        else if (b instanceof Long)
-          return operation.apply((BigDecimal) a, new BigDecimal((Long) b));
-        else if (b instanceof Short)
-          return operation.apply((BigDecimal) a, new BigDecimal((Short) b));
-        else if (b instanceof Float)
-          return operation.apply((BigDecimal) a, BigDecimal.valueOf((Float) b));
-        else if (b instanceof Double)
-          return operation.apply((BigDecimal) a, BigDecimal.valueOf((Double) b));
-        else if (b instanceof BigDecimal)
-          return operation.apply((BigDecimal) a, (BigDecimal) b);
+        if (b instanceof Integer integer)
+          return operation.apply((BigDecimal) a, new BigDecimal(integer));
+        else if (b instanceof Long long1)
+          return operation.apply((BigDecimal) a, new BigDecimal(long1));
+        else if (b instanceof Short short1)
+          return operation.apply((BigDecimal) a, new BigDecimal(short1));
+        else if (b instanceof Float float1)
+          return operation.apply((BigDecimal) a, BigDecimal.valueOf(float1));
+        else if (b instanceof Double double1)
+          return operation.apply((BigDecimal) a, BigDecimal.valueOf(double1));
+        else if (b instanceof BigDecimal decimal)
+          return operation.apply((BigDecimal) a, decimal);
       }
 
       throw new IllegalArgumentException(
@@ -678,12 +674,12 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.get(0).execute(iCurrentRecord, context);
+      return childExpressions.getFirst().execute(iCurrentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.get(0).execute(iCurrentRecord, context);
+      final Object leftValue = childExpressions.getFirst().execute(iCurrentRecord, context);
       final Object rightValue = childExpressions.get(1).execute(iCurrentRecord, context);
-      return operators.get(0).apply(leftValue, rightValue);
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(iCurrentRecord, context);
@@ -694,12 +690,12 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.get(0).execute(iCurrentRecord, context);
+      return childExpressions.getFirst().execute(iCurrentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.get(0).execute(iCurrentRecord, context);
+      final Object leftValue = childExpressions.getFirst().execute(iCurrentRecord, context);
       final Object rightValue = childExpressions.get(1).execute(iCurrentRecord, context);
-      return operators.get(0).apply(leftValue, rightValue);
+      return operators.getFirst().apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(iCurrentRecord, context);
@@ -709,7 +705,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.get(0);
+    final MathExpression nextExpression = childExpressions.getFirst();
     final Object val = nextExpression.execute(iCurrentRecord, context);
     valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -737,7 +733,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.get(0);
+    final MathExpression nextExpression = childExpressions.getFirst();
     final Object val = nextExpression.execute(iCurrentRecord, context);
     valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -865,7 +861,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.get(0).isIndexedFunctionCall(context);
+    return this.childExpressions.getFirst().isIndexedFunctionCall(context);
   }
 
   public long estimateIndexedFunction(final FromClause target, final CommandContext context, final BinaryCompareOperator operator,
@@ -873,7 +869,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return -1;
     }
-    return this.childExpressions.get(0).estimateIndexedFunction(target, context, operator, right);
+    return this.childExpressions.getFirst().estimateIndexedFunction(target, context, operator, right);
   }
 
   public Iterable<Record> executeIndexedFunction(final FromClause target, final CommandContext context,
@@ -882,7 +878,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return null;
     }
-    return this.childExpressions.get(0).executeIndexedFunction(target, context, operator, right);
+    return this.childExpressions.getFirst().executeIndexedFunction(target, context, operator, right);
   }
 
   /**
@@ -900,7 +896,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.get(0).canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
+    return this.childExpressions.getFirst().canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
   }
 
   /**
@@ -917,7 +913,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
+    return this.childExpressions.getFirst().allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
   }
 
   /**
@@ -936,12 +932,12 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
+    return this.childExpressions.getFirst().executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
   }
 
   public boolean isBaseIdentifier() {
     if (this.childExpressions != null && childExpressions.size() == 1)
-      return childExpressions.get(0).isBaseIdentifier();
+      return childExpressions.getFirst().isBaseIdentifier();
 
     return false;
   }
@@ -978,7 +974,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.get(0).isCount();
+    return this.childExpressions.getFirst().isCount();
   }
 
   public SimpleNode splitForAggregation(final AggregateProjectionSplit aggregateProj, final CommandContext context) {
@@ -990,15 +986,14 @@ public class MathExpression extends SimpleNode {
           result.operators.add(operators.get(i - 1));
 
         final SimpleNode splitResult = expr.splitForAggregation(aggregateProj, context);
-        if (splitResult instanceof MathExpression) {
-          final MathExpression res = (MathExpression) splitResult;
+        if (splitResult instanceof MathExpression res) {
           if (res.isEarlyCalculated(context) || res.isAggregate(context)) {
             result.childExpressions.add(res);
           } else {
             throw new CommandExecutionException("Cannot mix aggregate and single record attribute values in the same projection");
           }
-        } else if (splitResult instanceof Expression) {
-          result.childExpressions.add(((Expression) splitResult).mathExpression);//this comes from a splitted aggregate function
+        } else if (splitResult instanceof Expression expression) {
+          result.childExpressions.add(expression.mathExpression);//this comes from a splitted aggregate function
         }
         i++;
       }
@@ -1054,7 +1049,7 @@ public class MathExpression extends SimpleNode {
     if (childExpressions.size() != 1)
       throw new CommandExecutionException("cannot apply REMOVE " + this);
 
-    childExpressions.get(0).applyRemove(result, context);
+    childExpressions.getFirst().applyRemove(result, context);
   }
 }
 /* JavaCC - OriginalChecksum=c255bea24e12493e1005ba2a4d1dbb9d (do not edit this line) */
