@@ -44,7 +44,7 @@ public class LargeRecordsTest extends TestHelper {
     database.begin();
 
     final DocumentType type = database.getSchema().getType("BigRecords");
-    final long pageOverSize = ((LocalBucket) type.getBuckets(true).get(0)).getPageSize() * 3;
+    final long pageOverSize = ((LocalBucket) type.getBuckets(true).getFirst()).getPageSize() * 3;
 
     database.scanType("BigRecords", true, record -> {
       Assertions.assertNotNull(record);
@@ -63,7 +63,7 @@ public class LargeRecordsTest extends TestHelper {
     database.transaction(() -> {
       final DocumentType type = database.getSchema().getOrCreateDocumentType("BigRecords");
 
-      final long pageOverSize = ((LocalBucket) type.getBuckets(true).get(0)).getPageSize() * 3;
+      final long pageOverSize = ((LocalBucket) type.getBuckets(true).getFirst()).getPageSize() * 3;
 
       final StringBuilder buffer = new StringBuilder();
       for (int k = 0; k < pageOverSize; ++k)
